[package]
name = "rocket-fastapi-example"
version = "0.1.0"
authors = ["Joe Mooney <joe.mooney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = "1.0.119"
rocket_contrib = {version = "0.4.6", features = ["json"] }
serde_derive = "1.0.119"
rocket_lamb = "0.6.0"
rocket_okapi = "0.5.1"
schemars = "0.7.6"
okapi = "0.4.0"

